--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,14 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+
+    implementation 'com.google.android.material:material:1.4.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'com.github.tiago-aguiar.at-way:ui:0.1.1'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
